including Specifications migrations, refactoring the models and altered the swagger.json file
